--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="/css/style.css">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
 
+
+
+
+
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="js/jquery.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
